1.2.13: 2003-08-
	- fix ~/.icewm/theme file permissions
	- fix drawing of checkboxes in menus
	- fix display corruption in network status
	- fix memory leak in icewmbg on workspace switches
	- fix menu behavior with xinerama
	- Italian translation updated
	- new preference "DoubleBuffer" (default: 1)

1.2.12: 2003-08-24
        - MAJOR CHANGE: reverted preferences/theme order to same 
          as before 1.2.10. Added "prefoverride" file for overriding
          theme preferences.
	- icewmbg is only re/started when already running
	- fix build with --disable-taskbar
	- fix build with --disable-shape
        - fix ShowMoveSizeStatus with OpaqueMove/Resize

1.2.11: 2003-08-19
	- added forcedClose window option (Hanspeter Roth)
	- added recent average in network monitor
        - fix icewmbg not setting theme background
	- fix spelling of _NET_WORKAREA hint (Jeff Pohlmeyer (tgeek))
        - fix spelling of --client-id option name (YAMAMOTO, Taku <taku@cent.saitama-u.ac.jp>)
	- fix random restart failures
	- fix codeset handling on FreeBSD
	- Czech translation update (Jan Horak)
	- Bulgarian translation (Pavel Pyuter)
	- fix painting of exposed icons

1.2.10: 2003-08-11
	- added "Default" to Themes submenu
	- documentation updates

1.2.10pre11: 2003-08-10
	- theme selector now writes the selected theme in ~/.icewm/theme
	- theme selector now restarts icewmbg automatically
	- minor cleanups in apm applet
	- build fixes
	- Infadel2 theme cleanups (Hanspeter Roth)

1.2.10pre10: 2003-08-01
	- fixed icewmbg semtransparency support. icewmbg will no longer
          exit when semitransparency is enabled
	- major focus cleanups

1.2.10pre9: 2003-07-30
	- double buffering performance optimizations

1.2.10pre8: 2003-07-27
	- FIXED: taskbar tray location off by one pixel
	- FIXED: rendering of icons on big-endian systems when 
                 --enable-antialiasing

1.2.10pre7: 2003-07-26
	- FIXED: shaped windows when --enable-shaped-decorations